--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Gerenciador de Tarefas</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Gerneciador de Tarefas</h1>
+    <h1>Gerenciador de Tarefas</h1>
 
     <form>
         <input type="text" placeholder="Digite uma Tarefa" required>
@@ -15,7 +16,6 @@
     </form>
       
      <ul>
-      
      </ul>
 
 </body>
