--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
 <body>
     <h1>Gerenciador de Tarefas</h1>
 
-    <form>
-        <input type="text" placeholder="Digite uma Tarefa" required>
-        <input type="text" placeholder="Descriação da Tarefa">
-        <button>ENVIAR</button> 
+    <form id = "task-form">
+
+        <input id="title" type="text" placeholder="Digite uma Tarefa" required>
+        <input id="description" type="text" placeholder="Descriação da Tarefa">
+        
+        <button type="submit">ENVIAR</button> 
+
     </form>
       
-     <ul>
+     <ul id="task-list">
      </ul>
+
+      <script src="script.js"></script>
 
 </body>
 </html>
