--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width= , initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width= , initial-scale=1.0" />
     <title>Gerenciador de Tarefas</title>
-    <link rel="stylesheet" href="/style.css">
-</head>
-<body>
-    <h1>Gerenciador de Tarefas</h1>
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Gerenciador de Tarefas</h1>
 
-    <form id = "task-form">
+      <form id="task-form">
+        <input
+          id="title"
+          type="text"
+          placeholder="Digite uma Tarefa"
+          required
+        />
+        <input
+          id="description"
+          type="text"
+          placeholder="Descriação da Tarefa"
+        />
 
-        <input id="title" type="text" placeholder="Digite uma Tarefa" required>
-        <input id="description" type="text" placeholder="Descriação da Tarefa">
-        
-        <button type="submit">ENVIAR</button> 
+        <button type="submit">ENVIAR</button>
+      </form>
 
-    </form>
-      
-     <ul id="task-list">
-     </ul>
+      <ul id="task-list"></ul>
+    </div>
 
-      <script src="script.js"></script>
+    <script src="script.js"></script>
 
-</body>
+  </body>
 </html>
